line 212 fix to gap between iw and tail

--- a/THIS/styles.css
+++ b/THIS/styles.css
@@ -209,6 +209,7 @@ span.psw {
 
 #iw-container {
     margin-bottom: 5px;
+    max-height: 180px;
 }
 
 /* Blue background header */
